<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">World Coffees</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="pasificoRegular" tools:ignore="ReferenceType">@font/pacificoregular</string>
    <string name="robotoextralight" tools:ignore="ReferenceType">@font/robotaslabextralight</string>
    <string name="robotaslabregular" tools:ignore="ReferenceType">@font/robotaslabregular</string>
    <string name="robotoslabblack" tools:ignore="ReferenceType">@font/robotoslabblack</string>
    <string name="robotoslabbold" tools:ignore="ReferenceType">@font/robotoslabbold</string>
    <string name="robotoslabextrabold" tools:ignore="ReferenceType">@font/robotoslabextrabold</string>
    <string name="robotoslablight" tools:ignore="ReferenceType">@font/robotoslablight</string>
    <string name="robotoslabmedium" tools:ignore="ReferenceType">@font/robotoslabmedium</string>
    <string name="robotoslabsemibold" tools:ignore="ReferenceType">@font/robotoslabsemibold</string>
    <string name="robotoslabthin" tools:ignore="ReferenceType">@font/robotoslabthin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_of_coffee">The history of coffee dates back to centuries of old oral tradition in modern day Jimma, Ethiopia. Coffee was first cultivated in Ethiopia, then later introduced to other countries. In the 15th century, Sufi monasteries in Yemen employed coffee as an aid to concentration during prayers.</string>
    <string name="history_of_name_2">Coffee later spread to the Levant in the early 16th century; it caused some controversy on whether it was halal in Ottoman and Mamluk society. Coffee arrived in Italy the second half of the 16th century through commercial Mediterranean trade routes, while Central and Eastern Europeans learned of coffee from the Ottomans.</string>
    <string name="history_of_name_3">By the mid 17th century, it had reached India and the East Indies. Coffeepot (cafetière "campanienne"), part of a service, 1836, hard-paste porcelain, Metropolitan Museum of Art Coffee houses were established in Western Europe by the late 17th century, especially in Holland, England, and Germany. One of the earliest cultivations of coffee in the New World was when Gabriel de Clieu brought coffee seedlings to Martinique in 1720.</string>
    <string name="history_of_coffee_4">These beans later sprouted 18,680 coffee trees which enabled its spread to other Caribbean islands such as Saint-Domingue and also to Mexico. By 1788, Saint-Domingue supplied half the world\'s coffee.[citation needed] By 1852 Brazil became the world\'s largest producer of coffee and has held that status ever since. The period since 1950 saw the widening of the playing field owing to the emergence of several other major producers, notably Colombia, the Ivory Coast, Ethiopia, and Vietnam; the latter overtook Colombia and became the second-largest producer in 1999. Modern production techniques along with the mass productization of coffee has made it a household item today.</string>
    <string name="middle_east">Sufis in Yemen used the beverage as an aid to concentration and as a kind of spiritual intoxication when they chanted the name of God. Sufis used it to keep themselves alert during their nighttime devotions. The 16th century Umdat al Safwa fi hill al-qahwa عمدة الصفوة في حل القهوة by Abd al-Qadir al-Jaziri, an important early source on the history of coffee, traces the spread of coffee from Arabia Felix (present-day Yemen) northward to Mecca and Medina, and then to the larger cities of Cairo, Damascus, Baghdad, and Constantinople.</string>
    <string name="middle_east_2"> By 1414, the plant was known in Mecca, and in the early 1500s was spreading to the Mameluke Sultanate of Egypt and North Africa from the Yemeni port of Mocha. Associated with Sufism, myriad coffee houses grew up in Cairo (Egypt) around the religious University of the Azhar. These coffee houses also opened in Syria, especially in the cosmopolitan city of Aleppo, and then in Istanbul, the capital of the Ottoman Empire, in 1554. Coffee was also noted in Aleppo by the German physician botanist Leonhard Rauwolf, the first European to mention it, as chaube, in 1573; Rauwolf was closely followed by descriptions from other European travellers.</string>
    <string name="middle_east_3">In 1511, it was forbidden for its stimulating effect by conservative, orthodox imams at a theological court in Mecca. However, these bans were to be overturned in 1524 by an order of the Ottoman Turkish Sultan Suleiman I, with Grand Mufti Mehmet Ebussuud el-İmadi issuing a fatwa allowing the consumption of coffee. In Cairo a similar ban was instituted in 1532, and the coffeehouses and warehouses containing coffee beans were sacked.[18] During the 16th century, it had already reached the rest of the Middle East, the Safavid Empire and the Ottoman Empire. From the Middle East, coffee drinking spread to Italy, then to the rest of Europe, and coffee plants were transported by the Dutch to the East Indies and to the Americas.</string>
    <string name="europe">Coffee was first introduced to Europe in Hungary when the Turks invaded Hungary at the Battle of Mohács in 1526. Within a year, coffee had reached Vienna by the same Turks who fought the Europeans at the Siege of Vienna (1529). Later in the 16th century, coffee was introduced on the island of Malta through slavery. Turkish Muslim slaves had been imprisoned by the Knights of St John in 1565—the year of the Great Siege of Malta, and they used them to make their traditional beverage. Domenico Magri mentioned in his work Virtu del Kafé, "Turks, most skillful makers of this concoction." </string>
    <string name="europe_2">Also, the German traveler Gustav Sommerfeldt in 1663 wrote "the ability and industriousness with which the Turkish prisoners earn some money, especially by preparing coffee, a powder resembling snuff tobacco, with water and sugar." Coffee was a popular beverage in Maltese high society—many coffee shops opened.</string>
    <string name="europe_3">The first mention of coffee in a European text is in Charles de l Ecluses Aromatum et simplicium aliquot medica-mentorum apud Indos nascientum historia from 1575. He learnt of coffee from Alphoncius Pansius in Padua. Englishmen passing through Safavid and the Ottoman Empire in the late 16th century noted that coffee was "very good to help digestion, to quicken the spirits, and to cleanse the blood.”</string>
    <string name="europe_4">The vibrant trade between the Republic of Venice and the people of North Africa, Egypt, and the East brought a large variety of African goods, including coffee, to this leading European port. Venetian merchants introduced coffee-drinking to the wealthy in Venice, charging them heavily for the beverage. In this way, coffee was introduced to the mainland of Europe. In 1591 Venetian botanist-physician Prospero Alpini became the first to publish a description of the coffee plant in Europe. The first European coffee house apart from those in the Ottoman Empire and in Malta was opened in Venice in 1645.</string>
    <string name="europe_5">The first route of travel for coffee was through the massive, sprawling Ottoman Empire that allowed transportation of goods such as coffee to make their way well into Europe, and the second route of travel was from the port of Mocha in Yemen, where the East India Trading Co. bought coffee in masses and transported it back to mainland Europe. Coffee became a crucial part of the culture in most of Europe, with queens, kings, and the general public all becoming extensively enthralled with the product. Rather it be through the term coffee arabica or the transportation of the drink, the passage of coffee into the Western world greatly resembles that of the scientific knowledge and discoveries passed on by the Islamicate Empires.</string>
    <string name="guatemala1">Coffee production in Guatemala began to develop in the 1850s. Coffee is an important element of Guatemalas economy. Guatemala was Central Americas top producer of coffee for most of the 20th and the beginning of the 21st century, until being overtaken by Honduras in 2011. Illegal exports to Honduras and Mexico are not reflected in official statistics.</string>
    <string name="guatemala_geography">The most suitable temperature for the healthy growth and abundant production of coffee in Guatemala is that of 16 to 32 °C (60 to 90 °F). In lands situated at an altitude of 500–700 metres (1,600–2,300 ft) above sea level, young plants must be shaded.In zones averaging an altitude of 1,500 metres (4,900 ft), the plantations must be sheltered from the cold north winds. For the most part, the coffee plantations are situated at an altitude varying from 500–5,000 metres (1,600–16,400 ft) above sea level.</string>
    <string name="guatemala_history1">The coffee industry began to develop in Guatemala in the 1850s and 1860s, initially mixing its cultivation with cochineal. German immigrants played “a very important role” in the introduction of coffee to the country, according to Marta Elena Casaús Arzú.[citation needed] Small plantations flourished in Amatitlán and Antigua areas in the southwest. Initial growth though was slow due to lack of knowledge and technology. Many planters had to rely on loans and borrow from their families to finance their coffee estates (fincas) with coffee production in Guatemala increasingly owned by foreign companies who possessed the financial power to buy plantations and provide investment.</string>
    <string name="guatemala_history2">A scarcity of laborers was the main obstacle to a rapid increase of coffee production in Guatemala. In 1887, the production was over 22,000,000 kg (48,500,000 lb). In 1891, it was over 24,000,000 kg (52,000,000 lb). From 1879 to 1883, Guatemala exported 133,027,289 kg (293,274,971 lb) pounds of coffee. By 1902 the most important coffee plantations were found on the southern coast.</string>
    <string name="guatemala_history3">Many acres of land were suitable for this cultivation, and the varieties that were produced in the temperate regions were superior. Coffee was grown around Guatemala City, Chimaltenango, and Verapaz. The majority of the plantations were located in the departments of Guatemala, Amatitlan, Sacatepequez, Solola, Retalhuleu, Quezaltenango, San Marcos, and Alta Verapaz.</string>
    <string name="Anacafé1">Anacafé (Asociación Nacional del Café) was established in 1960 as a national coffee association, representing all coffee producers in Guatemala. It was initiated by the precursors to the International Coffee Organization, as a way of centralizing statistics of the nations coffee production as it continued the work of La Oficina Central del Café, previously established and operated by the central government which in turn was established in 1928.</string>
    <string name="Anacafé2">Anacafé has established a Guatemalan Coffees brand, and defined eight coffee regions under the slogan "A Rainbow of Choices". The regions are: Acatenango Valley, Antigua Coffee, Traditional Atitlan, Rainforest Coban, Fraijanes Plateau, Highland Huehue, New Oriente, and Volcanic San Marcos.</string>
    <string name="Anacafé3">Anacafé has built the Analab coffee laboratories, established a program for children called Funcafé, and publishes El Cafetal, a coffee magazine. Anacafé represents Guatemala in the International Coffee Organizations meetings, and receives income only from service charges on exported coffee items.</string>
</resources>