<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/SCREEN"
    android:background="#ffcab5"
    tools:context=".DashbordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:lottie_autoPlay="true"
        app:lottie_cacheComposition="true"
        app:lottie_loop="true"
        android:background="#fdf1cb"
        app:lottie_speed="1"
        app:lottie_rawRes="@raw/dashbordcoffeanim"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HISTORY OF COFFEE"
        android:fontFamily="@font/robotoslabblack"
        android:background="#ffa"
        android:layout_marginTop="36dp"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/history_of_coffee"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/history_of_name_2"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/history_of_name_3"
            android:layout_gravity="center_horizontal"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/history_of_coffee_4"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COFFEE IN MİDDLE EAST"
            android:fontFamily="@font/robotoslabblack"
            android:background="#ffa"
            android:layout_marginTop="36dp"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"/>



            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/middle_east_man"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Syrian Bedouin from a beehive village in Aleppo, Syria, sipping the traditional murra (bitter) coffee, 1930"
                android:fontFamily="@font/robotoslabextrabold"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                style="@style/TEXT"

                android:textColor="@color/black"/>






        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/middle_east"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            style="@style/TEXT"

            android:text="@string/middle_east_2"
            android:layout_gravity="center_horizontal"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/middle_east_3"
            android:layout_gravity="center_horizontal"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="IN EUROPE"
            android:fontFamily="@font/robotoslabblack"
            android:background="#ffa"
            android:layout_marginTop="36dp"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <ImageView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/mochaa"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dutch engraving of Mocha in 1692"
                android:fontFamily="@font/robotoslabextrabold"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                style="@style/TEXT"

                android:textColor="@color/black"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/europe"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            style="@style/TEXT"

            android:text="@string/europe_2"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/europe_3"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            style="@style/TEXT"

            android:text="@string/europe_4"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            style="@style/TEXT"

            android:fontFamily="@font/robotoslabblack"
            android:textColor="@color/black"
            android:text="@string/europe_5"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>